--- a/src/template/partials/global/header.hbs
+++ b/src/template/partials/global/header.hbs
@@ -3,20 +3,21 @@
 	<div class="wrapper">
 
 	<nav>
+		<a href="#" id="nav-mobile" class="nav-mobile" title="Navigation"></a>
 		<a href="http://www.arts.ac.uk/" title="University of the Arts London website">
-			<img src="assets/img/logo-white-36px.png" alt="University of the Arts London logo" height="30px" width="125px" class="logo"> 
+			<img src="assets/img/logo-white-36px.png" alt="University of the Arts London logo" class="logo-desktop"> 
+			<img src="assets/img/logo-sm.png" alt="University of the Arts London logo" class="logo-mobile"> 
 		</a> 
 		
-		<ul>
-			<li><a href="#">Study</a></li>
-			<li><a href="#">Research</a></li>
-			<li><a href="#">Careers</a></li>
-			<li><a href="#">Alumni & Friends</a></li>
-			<li><a href="#">Business</a></li>
-			<li><a href="#">About UAL</a></li>
-		
-			<li><a href="#" class="mega">Courses</a></li>
-			<li><a href="#" class="mega">Colleges</a></li>
+		<ul> 
+			<li class="hidden-desktop"><a href="#">Study</a></li>
+			<li class="hidden-desktop"><a href="#">Research</a></li>
+			<li class="hidden-desktop"><a href="#">Careers</a></li>
+			<li class="hidden-desktop"><a href="#">Alumni & Friends</a></li>
+			<li class="hidden-desktop"><a href="#">Business</a></li>
+			<li class="hidden-desktop"><a href="#">About UAL</a></li> 
+			<li><a href="#" class="mega nav-courses">Courses</a></li>
+			<li><a href="#" class="mega nav-colleges">Colleges</a></li>
 			<li><a href="#" class="mega search"><span></span></a></li>
 		</ul>
 	</nav> 	
