--- a/src/assets/scss/includes/_media-queries.scss
+++ b/src/assets/scss/includes/_media-queries.scss
@@ -7,11 +7,11 @@
 $padding-lr: 0em;
 
 $gutter: $padding-lr;
-$max-width: 95rem;
+$max-width: 1440px;
 
-$small-screen: 40em;
-$medium-screen: 51em;
-$large-screen: 64em;
+$small-screen: 599px;
+$medium-screen: 959px;
+$large-screen: 1280px;
 
 $xsmall-only: new-breakpoint(max-width 39.99em);
 
