--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -20,7 +20,7 @@
 		.inner-panel {
 			background-color: $white;
 			opacity: 0.95;
-			max-width: 690px;
+			max-width: 790px;
 			width: 85%;
 			position: relative;
 			top: rem(40);
@@ -35,11 +35,11 @@
 			}
 			.panel {
 				width: 100%;
-				padding: 0 3%;
+				padding: 0 2%;
 				text-align: left;
 				@include media($small) {
-					width: 44%;  
-					margin: % 1% 1% 3%;
+					width: 48%;  
+					margin: 1% 1% 1% 1%;
 				}
 			}
 
@@ -52,9 +52,10 @@
 			a {
 				display: block;
 				color: black;
-				font-size: rem(16); 
+				font-size: rem(18); 
 				border-bottom: 1px solid #c8c8c8;
 				padding: rem(10) rem(20);
+				font-family: $font-bold;
 
 			}
 		}
@@ -118,6 +119,7 @@
 		.button {
 			margin-top: 3%;
 			width: 100%;
+			text-align: center;
 			@include media($small) {
 				width: auto; 
 				margin-left: 1%;
