--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -1,23 +1,17 @@
 
-<nav id="global-menu" class="global-menu">
-	<div class="top-right-buttons">
-		<a href="#" title="Close main menu" id="trigger-menu-close" class="menu-button">Close</a>
+<nav id="college-menu" class="global-menu college-menu">
+	
+	<div class="menu-header">
+		<h4>Our Six Colleges</h4>
+		<a href="#" title="Close main menu" id="trigger-menu-close" class="menu-button menu-close">Close</a>
 	</div>
 
 	<div class="menu-content">
-		<ul>
-			<li>
-				<a href="./.html" title="Go to " class="page-link">a</a>
-			</li>
-			<li>
-				<a href="./.html" title="Go to " class="page-link">a</a>
-			</li>
-			<li>
-				<a href="./.html" title="Go to " class="page-link">a</a>
-			</li>
-		</ul>
- 
-		 
-
+			<a href="./.html" class="camberwell"><span>Camberwell College of Arts</span></a>
+			<a href="./.html" class="csm"><span>Central Saint Martins</span></a>
+			<a href="./.html" class="chelsea"><span>Chelsea College of Arts</span></a>
+			<a href="./.html" class="comm"><span>London College of Communication</span></a>
+			<a href="./.html" class="fashion"><span>London College of Fashion</span></a>
+			<a href="./.html" class="wimbledon"><span>Wimbledon College of Arts</span></a>
 	</div>
 </nav>
