--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -31,6 +31,7 @@ $sides-spacing-mobile: rem(10);
 $black: black;
 $white: white;
 $dark-gray: #333; 
+$nav-border: #757575;
 
 // Form colors
 $radio-border: #b7b7b7;
