--- a/src/assets/scss/modules/global/_header.scss
+++ b/src/assets/scss/modules/global/_header.scss
@@ -11,10 +11,10 @@
 	}
 
 	.wrapper {
-		height: 100%;
-		width: 100%; 
-		@include media($medium) { 
-			width: inherit;
+		height: 100%; 
+		width: 100%;
+		@include media($small) {  
+			width: 92.5%;
 		}
 	}
 
