--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -8,20 +8,139 @@
 	top: 0;
 	z-index: 999;
 	width: 100%;
-	height: 100%;
-
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	/* background-image: url(../img/.jpg); */
 	background-color: black;
-
- 
+	opacity: 0.98;
 
 	&.active {
 		display: block;
 	}
+
+	.menu-header {
+		height: 70px;
+		margin: auto;
+		border-bottom: 1px solid $nav-border;
+
+		h4 {
+			color: white;
+			text-align: center;
+			text-transform: uppercase;
+			margin: auto;
+			font-size: rem(16);
+			font-family: $font-bold;
+			@include vertical-align;
+		}
+
+		.menu-close {
+			position: absolute;
+			right: rem(20);
+			width: 27px;
+			height: 26px;
+			background-repeat: no-repeat;
+			background-position: center center;
+			background-image: url(../img/icon-close.png);
+			text-indent: -10000px;
+			@include media($small) {
+				right: rem(40);
+			}
+
+		}
+	}
  
 }
 
+.college-menu {
+	height: 490px;
+	@include media($small) {
+		height: 598px;
+	}
+
+	.menu-content {
+		a {
+			float: left;
+			width: 100%;
+			height:70px;
+			border-right: 1px solid $nav-border;
+			border-bottom: 1px solid $nav-border;
+			display: inline-block;
+			text-align: center;
+			margin: auto;
+			font-size: rem(14);
+			color: white;
+			line-height: 1.13px;
+			position: relative;
+			@include transition(opacity 0.5s ease-in-out);
+			
+
+			@include media($small) {
+				width: 33.3333%;
+				height: 264px;
+				font-size: rem(16);
+
+			}
+			@include media($medium) {
+				font-size: rem(20);
+			}
+
+			&:nth-child(n+4) {
+				
+				@include media($small) {
+			 		border-bottom: 0;
+				}
+			}
+
+			
+
+
+
+			&.camberwell:after {
+				background-image: url(../img/nav-imgs/camberwell.png); 
+			}
+			&.csm:after {
+				background-image: url(../img/nav-imgs/csm.png); 
+			}
+			&.chelsea:after {
+				background-image: url(../img/nav-imgs/chelsea.png); 
+			}
+			&.comm:after {
+				background-image: url(../img/nav-imgs/comm.png); 
+			}
+			&.fashion:after {
+				background-image: url(../img/nav-imgs/fashion.png); 
+			}
+			&.wimbledon:after {
+				background-image: url(../img/nav-imgs/wimbledon.png); 
+			}
+
+			&:after {
+				content: ""; 
+			    opacity: 0;
+			    top: 0;
+			    left: 0;
+			    bottom: 0;
+			    right: 0;
+			    position: absolute;
+			    z-index: 1;
+			    background-repeat: no-repeat; 
+				background-size: cover;
+				@include transition(opacity 0.2s ease-in-out);
+			}
+
+			&:hover:after {
+				opacity: 1;
+			}
+
+
+			span {
+				@include vertical-align;
+				z-index: 2;
+				display: inline-block;
+				line-height: 2rem;
+
+				@include media($small) {
+					 
+				}
+			}
+		}
+	}
+}
  
