--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -15,3 +15,20 @@
 			<a href="./.html" class="wimbledon"><span>Wimbledon College of Arts</span></a>
 	</div>
 </nav>
+
+
+
+
+
+<nav id="search-menu" class="global-menu search-menu">
+	
+	<div class="menu-header">
+		<h4>Search</h4>
+		<a href="#" title="Close main menu" id="search-menu-close" class="menu-button menu-close">Close</a>
+	</div>
+
+	<div class="menu-content">
+		<input placeholder="Start typing" />
+		<a href="#" class="button">Search</a>
+	</div>
+</nav>
