--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -1,9 +1,29 @@
 
+<nav id="course-menu" class="global-menu course-menu">
+	
+	<div class="menu-header">
+		<h4>Find a course</h4>
+		<a href="#" title="Close main menu" id="course-menu-close" class="menu-button menu-close">Close</a>
+	</div>
+
+	<div class="menu-content">
+		<input placeholder="Find a course at UAL" /><br/>
+		<select>
+			<option>Level</option>
+			<option>Level 2</option>
+			<option>Level 3</option>
+			<option>Level 4</option>
+			<option>Level 5</option>
+		</select>
+		<a href="#" class="button">Search</a>
+	</div>
+</nav>
+
 <nav id="college-menu" class="global-menu college-menu">
 	
 	<div class="menu-header">
 		<h4>Our Six Colleges</h4>
-		<a href="#" title="Close main menu" id="trigger-menu-close" class="menu-button menu-close">Close</a>
+		<a href="#" title="Close main menu" id="college-menu-close" class="menu-button menu-close">Close</a>
 	</div>
 
 	<div class="menu-content">
@@ -15,10 +35,6 @@
 			<a href="./.html" class="wimbledon"><span>Wimbledon College of Arts</span></a>
 	</div>
 </nav>
-
-
-
-
 
 <nav id="search-menu" class="global-menu search-menu">
 	
@@ -32,3 +48,6 @@
 		<a href="#" class="button">Search</a>
 	</div>
 </nav>
+
+
+
