--- a/src/template/partials/global/header.hbs
+++ b/src/template/partials/global/header.hbs
@@ -16,7 +16,7 @@
 			<li class="hidden-desktop"><a href="#">Alumni & Friends</a></li>
 			<li class="hidden-desktop"><a href="#">Business</a></li>
 			<li class="hidden-desktop"><a href="#">About UAL</a></li> 
-			<li><a href="#" class="mega nav-courses">Courses</a></li>
+			<li><a href="#" class="mega nav-courses" id="trigger-menu-course">Courses</a></li>
 			<li><a href="#" class="mega nav-colleges" id="trigger-menu-colleges">Colleges</a></li>
 			<li><a href="#" class="mega search" id="trigger-menu-search"><span></span></a></li>
 		</ul>
