MENU. STUDY (MEGA). Built. Responsive. Close option not defined (tbc).

--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -50,4 +50,47 @@
 </nav>
 
 
+<nav id="study-menu" class="global-menu study-menu">
+	
+	 
+	
+	<div class="menu-content"> 
+	<div class="wrapper">
+		<ul>
+			<li><a href="#">Study</a></li>
+			<li><a href="#">Courses</a></li>
+			<li><a href="#">Foundation Diploma in Art & Design</a></li>
+			<li><a href="#">Postrgraduate Study</a></li>
+			<li><a href="#">Short Courses</a></li>
+			<li><a href="#">International</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">Study Abroad</a></li>
+			<li><a href="#">Erasmus & Non-Erasmus Exchanges</a></li>
+			<li><a href="#">Language Center</a></li>
+			<li><a href="#">Open Days</a></li>
+			<li><a href="#">Apply</a></li>
+			<li><a href="#">Enrol</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">Student Fees & Funding</a></li>
+			<li><a href="#">Student Services</a></li>
+			<li><a href="#">Library Services</a></li>
+			<li><a href="#">Term Dates</a></li>
+			<li><a href="#">Academic Regulations</a></li>
+			<li><a href="#">Accomodation</a></li>
+		</ul>
+		<ul>
+			<li><a href="#">Students' Union</a></li>
+			<li><a href="#">Facilities</a></li>
+			<li><a href="#">Widening Participation</a></li>
+			<li><a href="#">Awards Ceremonies</a></li>
+			<li><a href="#">Term Dates</a></li>
+			<li><a href="#">Summer Shows</a></li>
+		</ul>
+	</div>
+	</div>
+</nav>
+
+
 
