--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -208,8 +208,12 @@
 			border: 0; 
 			width: 100%;
 			padding-left: rem(20); 
-			font-size: rem(17);
 
+			font-size: rem(17);
+			@include media($small) {
+				margin-bottom: rem(20); 
+				
+			}
 			 
 			&:focus,
 			&.focus { 
@@ -269,5 +273,61 @@
 				
 			}
 		}
+	}
+}
+
+
+.study-menu {
+	top: 45px;
+	height: 100%;
+	background-color: transparent;
+	padding-bottom: rem(60);
+	@include media($small) {
+		height: 345px;
+		
+	}
+	@include media($medium) {
+		top: 70px;
+	} 
+	 
+	.menu-content {
+	 	color: black;
+	 	background-color: white;
+	 	padding-top: rem(20);
+	 	padding-bottom: rem(40);
+	 	@include clearfix;
+
+	 	ul {
+	 		width: 96%;
+	 		margin: 2%;
+	 		padding: 0;
+	 		float: left;
+	 		margin: 0% 1% 1% 0; 
+
+
+
+	 		@include media($small) {
+				width: 22%;
+	 			margin: 1% 3% 1% 0;
+			} 
+
+			@include media($medium) {
+				width: 23%;
+	 			margin: 1% 1% 1% 0; 
+			} 
+
+			li {
+				a {
+					border-bottom: 1px solid #c8c8c8;
+					width: 100%;
+					display: block;
+					font-family: $font-bold;
+					font-size: rem(16);
+					color: black;
+					padding: rem(10) 0;
+				}
+
+			}
+	 	}
 	}
 }
