--- a/src/template/partials/global/header.hbs
+++ b/src/template/partials/global/header.hbs
@@ -3,7 +3,7 @@
 	<div class="wrapper">
 
 	<nav>
-		<a href="#" id="nav-mobile" class="nav-mobile" title="Navigation"></a>
+		<a href="#" id="trigger-menu-mobile" class="nav-mobile" title="Navigation"></a>
 		<a href="http://www.arts.ac.uk/" title="University of the Arts London website">
 			<img src="assets/img/logo-white-36px.png" alt="University of the Arts London logo" class="logo-desktop"> 
 			<img src="assets/img/logo-sm.png" alt="University of the Arts London logo" class="logo-mobile"> 
