--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -51,8 +51,9 @@
 
 
 <nav id="study-menu" class="global-menu study-menu">
-	
 	 
+	<a href="#" title="Close main menu" id="study-menu-close" class="menu-button menu-close">Close</a>
+ 
 	
 	<div class="menu-content"> 
 	<div class="wrapper">
@@ -94,3 +95,114 @@
 
 
 
+<nav id="mobile-menu" class="global-menu mobile-menu">
+	 
+	<a href="#" title="Close main menu" id="mobile-menu-close" class="menu-button menu-close">Close</a>
+ 
+	
+	<div class="menu-content">  
+
+		<ul>
+			<li><a href="#" class="trigger-subnav">Study<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">Courses</a></li>
+								<li><a href="#">Foundation Diploma in Art & Design</a></li>
+								<li><a href="#">Postrgraduate Study</a></li>
+								<li><a href="#">Short Courses</a></li>
+								<li><a href="#">International</a></li>
+								<li><a href="#">Study Abroad</a></li>
+								<li><a href="#">Erasmus & Non-Erasmus Exchanges</a></li>
+								<li><a href="#">Language Center</a></li>
+								<li><a href="#">Open Days</a></li>
+								<li><a href="#">Apply</a></li>
+								<li><a href="#">Enrol</a></li>
+								<li><a href="#">Student Fees & Funding</a></li>
+								<li><a href="#">Student Services</a></li>
+								<li><a href="#">Library Services</a></li>
+								<li><a href="#">Term Dates</a></li>
+								<li><a href="#">Academic Regulations</a></li>
+								<li><a href="#">Accomodation</a></li>
+								<li><a href="#">Students' Union</a></li>
+								<li><a href="#">Facilities</a></li>
+								<li><a href="#">Widening Participation</a></li>
+								<li><a href="#">Awards Ceremonies</a></li>
+								<li><a href="#">Term Dates</a></li>
+								<li><a href="#">Summer Shows</a></li>
+							</ul>
+
+			<li><a href="#" class="trigger-subnav">Research<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">Research Degrees</a></li>
+								<li><a href="#">UAL Staff Researchers</a></li>
+								<li><a href="#">Current Research & Projects</a></li>
+								<li><a href="#">UAL Research Centres</a></li>
+								<li><a href="#">Impact of UAL Research</a></li>
+								<li><a href="#">Researching at UAL</a></li>
+								<li><a href="#">Researching News & Events </a></li>
+								<li><a href="#">UAL: University Chairs</a></li>
+								<li><a href="#">Open Days</a></li>
+								<li><a href="#">Apply</a></li> 
+							</ul>	
+
+			<li><a href="#" class="trigger-subnav">Careers<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">Student Jobs & Careers</a></li>
+								<li><a href="#">Find Jobs & Internships</a></li>
+								<li><a href="#">Get Jobs Advice</a></li>
+								<li><a href="#">Events & Workshops</a></li>
+								<li><a href="#">Funding & Mentoring</a></li>
+								<li><a href="#">Freelance & Business Advice</a></li>
+								<li><a href="#">Exhibit & Sell Your Work</a></li> 
+								<li><a href="#">Employers & Partners</a></li>
+								<li><a href="#">About Careers & Employability</a></li> 
+							</ul>	
+
+			<li><a href="#" class="trigger-subnav">Alumni & Friends<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">Alumni & Friends</a></li>
+								<li><a href="#">Benefits</a></li>
+								<li><a href="#">Alumni Groups</a></li>
+								<li><a href="#">Events</a></li>
+								<li><a href="#">Inspiring Alumni</a></li>
+								<li><a href="#">Support & Donate</a></li>
+								<li><a href="#">Update Details</a></li> 
+							</ul>	
+
+			<li><a href="#" class="trigger-subnav">Business<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">Business</a></li>
+								<li><a href="#">Our Student & Graduate Talent</a></li>
+								<li><a href="#">Consultancy & Commissions </a></li>
+								<li><a href="#">Sponsorship & Partnerships</a></li>
+								<li><a href="#">Innovation & Research </a></li>
+								<li><a href="#">Training & Development</a></li>
+								<li><a href="#">Venue Hire & Conferences</a></li> 
+							</ul>
+
+			<li><a href="#" class="trigger-subnav">About UAL<span></span></a></li>
+							
+							<ul class="menu-expanded">	
+								<li><a href="#">About UAL</a></li>
+								<li><a href="#">Contact UAL</a></li>
+								<li><a href="#">UAL Jobs</a></li>
+								<li><a href="#">Strategy & Governance</a></li>
+								<li><a href="#">Events</a></li>
+								<li><a href="#">UAL Awarding Body</a></li>
+								<li><a href="#">Press Office</a></li> 
+								<li><a href="#">UAL Showroom</a></li>
+								<li><a href="#">Collections & Galleries</a></li>
+								<li><a href="#">Teaching & Learning</a></li>
+								<li><a href="#">Diversity</a></li>
+								<li><a href="#">Progression Partnerships</a></li>
+								<li><a href="#">Environment & Sustainability</a></li>
+								<li><a href="#">Support Our Creative Future</a></li> 
+							</ul>
+		</ul>
+		 
+	</div>
+</nav>
