--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -199,8 +199,6 @@
 			
 		}
 
-		
-
 		input {
 			height: 70px;
 			color: black;
@@ -208,11 +206,10 @@
 			border: 0; 
 			width: 100%;
 			padding-left: rem(20); 
-
 			font-size: rem(17);
+
 			@include media($small) {
 				margin-bottom: rem(20); 
-				
 			}
 			 
 			&:focus,
@@ -240,7 +237,7 @@
 
 			 
 			@include media($small) {
-				width: 7%;
+				width: 27%;
 				margin-right: rem(20);
 				margin-top: rem(0);
 				padding-left: rem(20);
@@ -263,7 +260,7 @@
 		}
 
 		.button { 
-			height: 69px;
+			height: 68px;
 			vertical-align: middle; 
 			padding-top: 20px;
 			margin-top: rem(20); 
@@ -356,6 +353,7 @@
 	    background-image: url(../img/icon-close-black.png);
 	    top: 10px;
 	    left: 10px;
+	    z-index: 40000;
 	}
 	 
 	.menu-content {
@@ -389,6 +387,9 @@
 			li {
 				padding-left: 7%;
 				position: relative;
+				border-bottom: 1px solid #cccccc;
+
+
 				a { 
 					width: 100%;
 					display: inline-block; 
@@ -397,6 +398,7 @@
 					color: black;
 					padding: rem(10) 0;
 					position: relative;
+
 
 					span {
 						background-repeat: no-repeat;
@@ -426,7 +428,7 @@
 			padding-left: 5%; 
 			background-color: #f5f5f5;
 			width: 100%;
-	 		margin: 2% 0; 
+	 		margin: 0; 
 
 	 		&.hidden {
 	 			display: none;
@@ -434,16 +436,25 @@
 
 
 			li {
+				border-bottom: 0;
 				a {
 					font-family: $font-std;
 					border-bottom: 1px solid #cccccc;
 					width: 90%; 
-					&:last-child {
-						 
-					}
+					
+				}
+
+				&:last-child a {
+					 border-bottom: 0px solid #cccccc;
 				}
 			}
 
 		}
 	}
+}
+
+.csm-menu {
+	height: 100%;
+	background-color: white;
+
 }
