--- a/src/template/pages/index.hbs
+++ b/src/template/pages/index.hbs
@@ -18,6 +18,7 @@
 </div>
 
 
+
 <section id="section-subsearch">
 <div class="wrapper">
 
@@ -36,6 +37,28 @@
 
 </div>
 </section>
+
+
+
+
+<section id="section-course-type">
+<div class="wrapper">
+
+	<div class="inner-content">
+		 <ul>
+		 	<li><a href="javascript:void(0)">Undergraduate</a></li>
+		 	<li><a href="javascript:void(0)">Postgraduate</a></li>
+		 	<li><a href="javascript:void(0)">Foundation</a></li>
+		 	<li><a href="javascript:void(0)" class="last">Short courses</a></li>
+		 </ul>
+	</div>
+
+
+</div>
+</section>
+
+
+
 
 <section id="section-college">
 <div class="wrapper row">
@@ -65,3 +88,27 @@
 </div>
 </section>
 
+<section id="section-promos">
+<div class="wrapper">
+
+	<div class="inner-content content-desktop">
+		 <img src="assets/img/static-imgs/promo1.png"><img src="assets/img/static-imgs/promo2.png">  
+	</div> 
+	<div class="inner-content content-mobile">
+		 <img src="assets/img/static-imgs/promo1-mob.png"><img src="assets/img/static-imgs/promo2-mob.png">  
+	</div> 
+</div>
+</section>
+
+
+<section id="section-whatson"> 
+
+	<div class="inner-content content-desktop">
+		 <img src="assets/img/static-imgs/promo-whatson.png"> 
+	</div> 
+	<div class="inner-content content-mobile">
+		 <img src="assets/img/static-imgs/promo-whatson-mob.png"> 
+	</div> 
+
+ 
+</section>
