--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -5,133 +5,134 @@
 
 #home {
 
-#section-college {
+	#section-college {
 
-	.college-block {
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: center center;
-		background-image: url(../img/bg-college.jpg);
-		min-height: 460px; 
-		@include media($small) {
-			 min-height: 371px; 
-		}
-
-		.inner-panel {
-			background-color: $white;
-			opacity: 0.95;
-			max-width: 790px;
-			width: 85%;
-			position: relative;
-			top: rem(40);
-			text-align: center; 
-			margin: rem(40) auto;
-			padding-bottom: rem(40);
+		.college-block {
+			background-size: cover;
+			background-repeat: no-repeat;
+			background-position: center center;
+			background-image: url(../img/bg-college.jpg);
+			min-height: 420px; 
 			@include media($small) {
-				width: 75%;
+				 min-height: 371px; 
 			}
-			.panel-container {
-				@include clearfix;
-			}
-			.panel {
-				width: 100%;
-				padding: 0 2%;
-				text-align: left;
+
+			.inner-panel {
+				background-color: $white;
+				opacity: 0.95;
+				max-width: 790px;
+				width: 85%;
+				position: relative;
+				top: rem(40);
+				text-align: center; 
+				margin: rem(40) auto;
+				
 				@include media($small) {
-					width: 48%;  
-					margin: 1% 1% 1% 1%;
+					width: 75%;
+					padding-bottom: rem(40);
+				}
+				.panel-container {
+					@include clearfix;
+				}
+				.panel {
+					width: 100%;
+					padding: 0 2%;
+					text-align: left;
+					@include media($small) {
+						width: 48%;  
+						margin: 1% 1% 1% 1%;
+					}
+				}
+
+				h3 { 
+					font-size: rem(30);
+					padding-top: rem(20);
+					margin-top: rem(20);
+				}
+
+				a {
+					display: block;
+					color: black;
+					font-size: rem(16); 
+					border-bottom: 1px solid #c8c8c8;
+					padding: rem(10) rem(20);
+					font-family: $font-bold;
+					@include media($medium) {
+						font-size: rem(18); 
+					}
+
 				}
 			}
-
-			h3 { 
-				font-size: rem(30);
-				padding-top: rem(20);
-				margin-top: rem(20);
-			}
-
-			a {
-				display: block;
-				color: black;
-				font-size: rem(18); 
-				border-bottom: 1px solid #c8c8c8;
-				padding: rem(10) rem(20);
-				font-family: $font-bold;
-
-			}
 		}
 	}
-}
 
-#section-subsearch {
-	 
-	@include media($small) {
-		 margin-top: rem(-45);
-	}
-
-	.subsearch-block {
-		margin: rem(10) 0; 
-		text-align: left;
-		background-color: $white;
-		padding: rem(10);
+	#section-promos {
+		margin: rem(40);
 		
-		@include media($small) {
-			box-shadow: 1px 5px 5px #dedede;
-		}
-
-		input { 
-			height: 45px;
-			color: black;
-			border: 1px solid #e9e9e9;
-			width: 100%;
-			padding-left: rem(20);
+		.content-desktop {
+			display: none; 
 			@include media($small) {
-				width: 60%;
+				display: block; 
+
 			}
-
 		}
-		::-webkit-input-placeholder { color: black; opacity: 1 !important; font-size: rem(16); }
-		:-moz-placeholder { color: black; font-size: rem(16);}
-		::-moz-placeholder {color: black; font-size: rem(16);}
-		:-ms-input-placeholder {color: black; font-size: rem(16);}
-
-		select {
-			width: 100%; 
-			height: 45px;
-			color: black;
-			border: 1px solid #e9e9e9; 
-			font-size: rem(16);
-			margin-top: 3%;
-			padding-left: rem(15);
+		.content-mobile {
+			display: block; 
 			@include media($small) {
-				width: 17%;
-				margin-left: 1%;
-				margin-top: inherit;
-				padding-left: rem(20);
+				display: none; 
 			}
-			@include media($medium) {
-				width: 26%;
-			}
-
-			option {
-				font-size: rem(16);
-				padding: rem(5);
-				padding-left: rem(20);
-			}
-
 		}
-		.button {
-			margin-top: 3%;
-			width: 100%;
+
+		.inner-content {
+			margin: auto;
 			text-align: center;
-			@include media($small) {
-				width: auto; 
-				margin-left: 1%;
-				margin-top: inherit;
+			img {
+				margin-top: 10%;
+				@include media($small) {
+					margin: 0 1%;
+					width: 48%;
+					display: inline-block;
+				}
+				&:nth-child(1) {
+					margin-left: 0;
+					text-align: left;
+				}
+				&:nth-child(2) {
+					margin-right: 0;
+					text-align: right;
+				}
 			}
 		}
 	}
-}
 
+	#section-whatson {
+		margin: rem(40);
+		
+		.content-desktop {
+			display: none; 
+			@include media($small) {
+				display: block; 
 
+			}
+		}
+		.content-mobile {
+			display: block; 
+			@include media($small) {
+				display: none; 
+			}
+		}
+
+		.inner-content {
+			margin: auto;
+			text-align: center;
+			img {
+				width: 100%;
+				@include media($small) {
+					margin: 0 1%;	
+
+				}
+			}
+		}
+	}
 
 }
