--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -49,7 +49,6 @@
 	</div>
 </nav>
 
-
 <nav id="study-menu" class="global-menu study-menu">
 	 
 	<a href="#" title="Close main menu" id="study-menu-close" class="menu-button menu-close">Close</a>
@@ -92,8 +91,6 @@
 	</div>
 	</div>
 </nav>
-
-
 
 <nav id="mobile-menu" class="global-menu mobile-menu">
 	 
@@ -205,4 +202,18 @@
 		</ul>
 		 
 	</div>
+</nav>
+
+<nav id="csm-menu" class="global-menu csm-menu">
+		<a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Courses</a></li>
+			<li><a href="#">What's on</a></li>
+			<li><a href="#">CSM Public</a></li>
+			<li><a href="#">Research</a></li> 
+			<li><a href="#">Business & Innovation</a></li> 
+			<li><a href="#">Drama Centre London</a></li> 
+		</ul>
 </nav>
