CSM page - layout, responsive, twitter carousel functional and responsive (slick.min.js), temp static content images. Small refinements to do.

--- a/src/assets/scss/modules/_course-type.scss
+++ b/src/assets/scss/modules/_course-type.scss
@@ -23,6 +23,10 @@
 					margin: 1%;
 					float: left; 
 					background-color: transparent;
+
+					&:nth-child(1) {
+						margin-left: 0;
+					}
 				}
 
 				a {
