--- a/src/template/pages/csm.hbs
+++ b/src/template/pages/csm.hbs
@@ -52,7 +52,6 @@
 		</select>
 		<a href="#" class="button">Search</a>
 	</div>
-
 </div> 
 </section>
 
@@ -68,30 +67,93 @@
 		 	<li><a href="javascript:void(0)" class="last">Postgraduate courses</a></li>
 		 </ul>
 	</div>
-
-
 </div>
 </section>
 
 
- 
-{{!-- 
-<section id="section-???">
+
+<section id="section-csmpromo" class="placeholder">
 <div class="wrapper">
 
 	<div class="inner-content content-desktop">
-		 <img src="assets/img/static-imgs/promo1.png"><img src="assets/img/static-imgs/promo2.png">  
+		 <img src="assets/img/static-imgs/csm-promo1.jpg">
+	</div> 
+	<div class="inner-content content-tablet">
+		 <img src="assets/img/static-imgs/csm-promo1-tab.jpg">
 	</div> 
 	<div class="inner-content content-mobile">
-		 <img src="assets/img/static-imgs/promo1-mob.png"><img src="assets/img/static-imgs/promo2-mob.png">  
+		 <img src="assets/img/static-imgs/csm-promo1-mob.jpg">
 	</div> 
 </div>
 </section>
 
 
-<section id="section-???">
+
+
+<section id="section-twitter-carousel">
+<div class="wrapper">
+	<h3>CSM on Twitter</h3>
+	<div class="twitter-content">
+		<div>
+	  	<p>
+	  		UAL staff and students: celebrate the 40th anniversary of the first Sex Pistol’s gig held at CSM, 6 Nov: <br/>
+	  		<a href="#" target="new">http://events.arts.ac.uk/event/2015/11/6/Be-Reasonable-Demand-the-Impossible/</a>
+
+	  	</p>
+	  	<p class="timestamp">2 hours</p>
+	  </div>
+	  <div>
+	  	<p>
+	  		See our Fine Art students in a live stream exhibition with Gustav Metzger, 4 Nov: <br/>
+	  		<a href="#" target="new">ttp://events.arts.ac.uk/event/2015/11/4/Gustav-Metzger-Remember-Nature-Project/ … </a>
+	  	</p>
+	  	<p class="timestamp">3 hours</p>
+	  </div>
+	  <div>
+	  	<p>
+	  		Central Saint Martins X The Big Draw - check out the film here:  <br/>
+	  		<a href="#" target="new">http://events.arts.ac.uk/event/2015/11/6/Be-Reasonable-Demand-the-Impossible/</a>
+	  	</p>
+	  	<p class="timestamp">Nov 6</p>
+	  </div>
+	  <div>
+	  	<p>
+	  		UAL staff and students: celebrate the 40th anniversary of the first Sex Pistol’s gig held at CSM, 6 Nov: <br/>
+	  		<a href="#" target="new">http://events.arts.ac.uk/event/2015/11/6/Be-Reasonable-Demand-the-Impossible/</a>
+	  	</p>
+	  	<p class="timestamp">Nov 7</p>
+	  </div>
+	  <div>
+	  	<p>
+	  		UAL staff and students: celebrate the 40th anniversary of the first Sex Pistol’s gig held at CSM, 6 Nov: <br/>
+	  		<a href="#" target="new">http://events.arts.ac.uk/event/2015/11/6/Be-Reasonable-Demand-the-Impossible/</a>
+	  	</p>
+	  	<p class="timestamp">Nov 12</p>
+	  </div>
+	  <div>
+	  	<p>
+	  		UAL staff and students: celebrate the 40th anniversary of the first Sex Pistol’s gig held at CSM, 6 Nov: <br/>
+	  		<a href="#" target="new">http://events.arts.ac.uk/event/2015/11/6/Be-Reasonable-Demand-the-Impossible/</a>
+	  	</p>
+	  	<p class="timestamp">Nov 13</p>
+	  </div>
+	</div>
+</div>
+</section>
+
+
+
+<section id="section-csmcontent" class="placeholder">
 <div class="wrapper">
 
-	
+	<div class="inner-content content-desktop">
+		 <img src="assets/img/static-imgs/csm-content.jpg">
+	</div> 
+	<div class="inner-content content-tablet">
+		 <img src="assets/img/static-imgs/csm-content-ipad.jpg">
+	</div> 
+	<div class="inner-content content-mobile">
+		 <img src="assets/img/static-imgs/csm-content-mob.jpg">
+	</div> 
 </div>
-</section> --}}
+</section>
