--- a/src/template/partials/global/menu.hbs
+++ b/src/template/partials/global/menu.hbs
@@ -204,9 +204,9 @@
 	</div>
 </nav>
 
-<nav id="csm-menu" class="global-menu csm-menu">
-		<a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a>
+<nav id="csm-menu" class="global-menu csm-menu"> 
 		<ul>
+			<li><a href="#" id="csm-menu-close" class="menu-button menu-close">Close</a>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
 			<li><a href="#">Courses</a></li>
