--- a/src/assets/scss/modules/global/_menu.scss
+++ b/src/assets/scss/modules/global/_menu.scss
@@ -457,4 +457,31 @@
 	height: 100%;
 	background-color: white;
 
+	.menu-close {
+		position: relative;
+	    background-repeat: no-repeat;
+	    background-position: center center;
+	    background-image: url(../img/icon-close-black.png);
+	    right: inherit;
+	    height: inherit;
+	    width: inherit;
+
+	}
+
+	ul {
+		li {
+			a {
+				width: 100%;
+				margin: auto;
+				display: block;
+				padding: rem(10);
+				text-align: center;
+				font-size: rem(17);
+				color: black;
+				font-family:  $font-bold;
+				border-bottom: 1px solid #d1d1d1;
+			}
+		}
+	}
+
 }
